--- a/BarcoderScanningApp/app/build.gradle
+++ b/BarcoderScanningApp/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.google.api.client:google-api-client-repackaged-com-google-common-base:1.2.3-alpha'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 }
