--- a/ReadingApp/app/build.gradle
+++ b/ReadingApp/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.google.guava:guava:24.1-android'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 }
