--- a/ReadingApp/app/build.gradle
+++ b/ReadingApp/app/build.gradle
@@ -28,4 +28,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.google.guava:guava:24.1-android'
     implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.8.5'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
+    implementation 'org.apache.commons:commons-lang3:3.6'
 }
