changed all order related requests and ui configs

--- a/ReadingApp/app/src/main/AndroidManifest.xml
+++ b/ReadingApp/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".NFCActivity"></activity>
+        <activity android:name=".NFCActivity" android:screenOrientation="portrait"></activity>
 
     </application>
 
